added "alt" attribute to all img tags and updated spacing in CSS file

--- a/index.html
+++ b/index.html
@@ -1,10 +1,13 @@
 <!DOCTYPE html>
-<html lang="en">
+<html lang="en" dir="ltr">
 <head>
     <!-- Required meta tags -->
     <meta charset="utf-8">
     <meta http-equiv="x-ua-compatible" content="ie=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
+    <meta name="description" content="Portfolio page displaying some of the projects I have built while in college and after.">
+
+    <title>JQ.net: Jose Quinones Web Development Portfolio</title>
 
     <!-- Bootstrap CSS -->
     <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0-beta/css/bootstrap.min.css" integrity="sha384-/Y6pD6FV/Vv2HJnA6t+vslU6fwYXjCFtcEpHbNJ0lyAFsXTsjBbfaDjzALeQsN6M" crossorigin="anonymous">
@@ -17,11 +20,11 @@
     <div class="container">
         <header>
             <nav class="navbar">
-                <a class="nav-brand" id="logo" href="#"><i>JQ.net</i></a>
+                <a class="nav-brand" id="logo" href="#" rel="noopener"><i>JQ.net</i></a>
                 <div class="navbar align-items-end">
                     <ul id="menu">
-                        <li><a href="#portfolio"><i>Portfolio</i></a></li>&nbsp;&nbsp;|&nbsp;&nbsp;
-                        <li><a href="#"><i>Blog</i></a></li>&nbsp;&nbsp;|&nbsp;&nbsp;
+                        <li><a href="#portfolio"><i>Portfolio</i></a></li>
+                        <li><a href="#"><i>Blog</i></a></li>
                         <li><a href="#contact"><i>Contact</i></a></li>
                     </ul>
                 </div>
@@ -30,13 +33,13 @@
                 <div class="container">
                     <div class="row justify-content-center">
                         <div id="head_shot">
-                            <img src="" width="" />
+                            <img src="#" alt="picture of me attempting to look very thoughtful and intelligent" width="#" />
                         </div>
                     </div>
                     <img class="d-flex align-content-center flex-column" id="hero-image" src="images/hero_image_2x.png" alt="computing devices" />
                     <div class="external_sites">
-                        <a href="#"><img class="float-right" src="images/LinkedIn_2x.png" width="100%"/></a>
-                        <a href="#"><img class="float-right" src="images/Github_2x.png" width="100%"/></a>
+                        <a href="#" rel="noopener"><img class="float-right" src="images/LinkedIn_2x.png" alt="LinkedIn icon" width="100%"/></a>
+                        <a href="#" rel="noopener"><img class="float-right" src="images/Github_2x.png" alt="GitHub icon" width="100%"/></a>
                     </div>
                 </div>
             </div>
@@ -44,7 +47,7 @@
         <!-- Main portfolio section -->
         <section>
             <div class="align-content-center portfolio_heading" id="portfolio">
-                <img src="images/Portfolio_2x.png" width="100%"/>
+                <img src="images/Portfolio_2x.png" alt="Portfolio heading" width="100%"/>
             </div>
             <!-- Portfolio entries -->
             <div class="row">
@@ -54,14 +57,14 @@
                         <div class="portfolio_entry">
                             <h3 class="text-center"><i>Music Store</i></h3>
                             <div class="portfolio_detail">
-                                <img src="images/music_store.png" class="entry_image" width="100%"/>
+                                <img src="images/music_store.png" class="entry_image" alt="image of entry for the music store" width="100%"/>
                                 <div class="middle">
                                     <div class="entry_info">A school project concept music store with a MySQL database, shopping cart, and User Authentication written in PHP. Check out my code on GitHub.</div>
                                 </div>
                             </div>
                         </div>
                         <div class="external_sites">
-                            <a href="https://github.com/jmoney618/music-store" target="_blank"><img src="images/Github_2x.png" width="100%"/></a>
+                            <a href="https://github.com/jmoney618/music-store" target="_blank" rel="noopener"><img src="images/Github_2x.png" alt="GitHub icon" width="100%"/></a>
                         </div>
                     </div>
                 </div>
@@ -71,14 +74,14 @@
                         <div class="portfolio_entry">
                             <h4 class="text-center"><i>Rock, Paper, Scissors, Lizard, Spock</i></h4>
                             <div class="portfolio_detail">
-                                <img src="images/rpsls.png" class="entry_image" width="100%"/>
+                                <img src="images/rpsls.png" class="entry_image" alt="image of entry for the Rock Paper Scissors Lizard Spock game" width="100%"/>
                                 <div class="middle">
                                     <div class="entry_info">A recreation of the classic game Rock Paper Scissors Lizard Spock. The game engine was written in JavaScript. Check out my code on GitHub.</div>
                                 </div>
                             </div>
                         </div>
                         <div class="external_sites">
-                            <a href="https://github.com/jmoney618/rpsls" target="_blank"><img src="images/Github_2x.png" width="100%"/></a>
+                            <a href="https://github.com/jmoney618/rpsls" target="_blank" rel="noopener"><img src="images/Github_2x.png" alt="GitHub icon" width="100%"/></a>
                         </div>
                     </div>
                 </div>
@@ -88,14 +91,14 @@
                         <div class="portfolio_entry">
                             <h3 class="text-center"><i>Video Game Store</i></h3>
                             <div class="portfolio_detail">
-                                <img src="images/video_game_store.png" class="entry_image" width="100%"/>
+                                <img src="images/video_game_store.png" class="entry_image" alt="image of entry for video store" width="100%"/>
                                 <div class="middle">
                                     <div class="entry_info">This school project is a basic video game store.  The games' details and images were stored in a MySQL database. A shopping cart was also a focus in this project. Check out my code on GitHub.</div>
                                 </div>
                             </div>
                         </div>
                         <div class="external_sites">
-                            <a href="https://github.com/jmoney618/video_games" target="_blank"><img src="images/Github_2x.png" width="100%"/></a>
+                            <a href="https://github.com/jmoney618/video_games" target="_blank" rel="noopener"><img src="images/Github_2x.png" alt="GitHub icon" width="100%"/></a>
                         </div>
                     </div>
                 </div>
@@ -107,14 +110,14 @@
                         <div class="portfolio_entry">
                             <h3 class="text-center"><i>Number Averager</i></h3>
                             <div class="portfolio_detail">
-                                <img src="images/averager.png" class="entry_image" width="100%"/>
+                                <img src="images/averager.png" class="entry_image" alt="image of Number Averager console app" width="100%"/>
                                 <div class="middle">
                                     <div class="entry_info">This is my first C#.NET app. I built it for a coworker who regularly plays the "guess what number I'm thinking of game" with his staff. Check out my source code on GitHub.</div>
                                 </div>
                             </div>
                         </div>
                         <div class="external_sites">
-                            <a href="https://github.com/jmoney618/numbers_hat" target="_blank"><img src="images/Github_2x.png" width="100%"/></a>
+                            <a href="https://github.com/jmoney618/numbers_hat" target="_blank" rel="noopener"><img src="images/Github_2x.png" alt="GitHub icon" width="100%"/></a>
                         </div>
                     </div>
                 </div>
@@ -124,14 +127,14 @@
                         <div class="portfolio_entry">
                             <h3 class="text-center"><i>Magic Number Hat</i></h3>
                             <div class="portfolio_detail">
-                                <img src="images/number_hat.png" class="entry_image" width="100%"/>
+                                <img src="images/number_hat.png" class="entry_image" alt="image of Magic Hat console app" width="100%"/>
                                 <div class="middle">
                                     <div class="entry_info">This console app is (as the name implies) a number averager written in C#.NET. It calculates the average of numbers entered by the user. I also wrote this app with separate Classes. Check out my source code on GitHub.</div>
                                 </div>
                             </div>
                         </div>
                         <div class="external_sites">
-                            <a href="https://github.com/jmoney618/Averager" target="_blank"><img src="images/Github_2x.png" width="100%"/></a>
+                            <a href="https://github.com/jmoney618/Averager" target="_blank" rel="noopener"><img src="images/Github_2x.png" alt="GitHub icon" width="100%"/></a>
                         </div>
                     </div>
                 </div>
@@ -141,14 +144,14 @@
                         <!--<div class="portfolio_entry">-->
                             <!--<h3 class="text-center"><i>#Title#</i></h3>-->
                             <!--<div class="portfolio_detail">-->
-                                <!--<img src="#" class="entry_image" width="100%"/>-->
+                                <!--<img src="#" class="entry_image" alt="#" width="100%"/>-->
                                 <!--<div class="middle">-->
                                     <!--<div class="entry_info">###Entry detail###</div>-->
                                 <!--</div>-->
                             <!--</div>-->
                         <!--</div>-->
                         <!--<div class="external_sites">-->
-                            <!--<a href="#" target="_blank"><img src="Github_2x.png" width="100%"/></a>-->
+                            <!--<a href="#" target="_blank" rel="noopener"><img src="Github_2x.png" alt="GitHub icon" width="100%"/></a>-->
                         <!--</div>-->
                     <!--</div>-->
                 </div>
