--- a/index.html
+++ b/index.html
@@ -2,6 +2,7 @@
 <html lang="en" dir="ltr">
 
 <head>
+
   <!-- Required meta tags -->
   <meta charset="utf-8">
   <meta http-equiv="x-ua-compatible" content="ie=edge">
@@ -9,6 +10,7 @@
   <meta name="description" content="Portfolio page displaying some of the projects I have built while in college and after.">
 
   <title>JQ.net: Jose Quinones Web Development Portfolio</title>
+
 
   <!-- Bootstrap CSS -->
   <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0-beta/css/bootstrap.min.css" integrity="sha384-/Y6pD6FV/Vv2HJnA6t+vslU6fwYXjCFtcEpHbNJ0lyAFsXTsjBbfaDjzALeQsN6M" crossorigin="anonymous">
@@ -164,7 +166,7 @@
   <div class="footer">
     <div class="container">
       <div class="align-content-center" id="contact"></div>
-      <div class="row">
+      <div class="row justify-content-center">
         <div class="col-md-6">
           <form id="contact" action="#" method="post">
             <label for="name"></label><input name="name" type="text" placeholder="Name" /><br />
@@ -172,7 +174,7 @@
             <label for="service">What service are you interested in: </label><input name="service" type="dropdown" /><br />
           </form>
         </div>
-        <div class="col-md-6">
+        <div class="col-md-4">
           <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute
             irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum.</p>
         </div>
