moved image and hover over message into position

--- a/newindex.html
+++ b/newindex.html
@@ -25,53 +25,72 @@
   <div class="navbar">
   </div>
   <div class="container">
-    <nav>
-      <ul class="nav justify-content-end">
-        <li><a class="nav-link" href="#portfolio">Portfolio</a></li>
-        <li><a class="nav-link" href="#contact">Contact</a></li>
-      </ul>
-    </nav>
-    <div class="row justify-content-center align-items-center" id="hero">
-      <div class="col-4">
-        <div id="hero-image">Picture of me
-          <img src="#" alt="picture of Jose Quinones doing something..." width="100" />
+    <header>
+      <nav>
+        <ul class="nav justify-content-end">
+          <li><a class="nav-link" href="#portfolio">Portfolio</a></li>
+          <li><a class="nav-link" href="#contact">Contact</a></li>
+        </ul>
+      </nav>
+      <div class="row justify-content-center align-items-center" id="hero">
+        <div class="col-4">
+          <div id="hero-image">Picture of me
+            <img src="#" alt="picture of Jose Quinones doing something..." width="100" />
+          </div>
         </div>
-      </div>
-      <div class="col-5 text-right">
-        <h1 class="header-message">Jose Quinones</h1>
-        <h2><i>Web Developer</i></h2>
-        <div class="row social_media">
-          <div class="col">
-            <a href="https://www.linkedin.com/in/jose-quinones-b31445109" class="button social" target="_blank"><i class="fa fa-lg fa-linkedin-square" aria-hidden="true"></i></a>
-            <a href="https://github.com/jmoney618" class="button social" target="_blank"><i class="fa fa-lg fa-github-alt" aria-hidden="true"></i></a>
+        <div class="col-5 text-right">
+          <h1 class="header-message">Jose Quinones</h1>
+          <h2><i>Web Developer</i></h2>
+          <div class="row social_media">
+            <div class="col">
+              <a href="https://www.linkedin.com/in/jose-quinones-b31445109" class="button social" target="_blank"><i class="fa fa-lg fa-linkedin-square" aria-hidden="true"></i></a>
+              <a href="https://github.com/jmoney618" class="button social" target="_blank"><i class="fa fa-lg fa-github-alt" aria-hidden="true"></i></a>
+            </div>
           </div>
         </div>
       </div>
-    </div>
+    </header>
     <!-- end of row -->
+
     <hr class="divider">
     <div class="row justify-content-center" id="portfolio">
-      <div class="col-12">
-        <h2 class="text-center" id="portfolio_link">Portfolio</h2>
+      <div class="col-2 portfolio_heading">
+        <img src="images/Portfolio_2x.png" alt="Portfolio heading" width="100%" />
       </div>
-      <div class="col-5 portfolio_entry text-center">
-        Portfolio entry will go here
+
+      <div class="row justify-content-center">
+        <div class="col-5 portfolio_entry text-center">
+          <div class="entry_bg">
+            <h3 class="text-center"><em>Music Store</em></h3>
+            <div class="portfolio_detail">
+              <img src="images/music_store.png" class="entry_image" alt="image of entry for the music store" width="80%" />
+              <div class="middle">
+                <div class="entry_info">A school project concept music store with a MySQL database, shopping cart, and User Authentication written in PHP. Check out my code on GitHub.</div>
+              </div>
+            </div>
+            <div class="external_sites">
+              <a href="https://github.com/jmoney618/music-store" target="_blank" rel="noopener"><i class="fa fa-github fa-2x" aria-hidden="true"></i></a>
+              <!-- <a href="https://github.com/jmoney618/music-store" target="_blank" rel="noopener"><img src="images/Github_2x.png" alt="GitHub icon" width="100%"/></a> -->
+            </div>
+          </div>
+        </div>
+        <div class="col-5 portfolio_entry text-center align-items-center">
+          Portfolio image and info will go here
+        </div>
+        <div class="col-5 portfolio_entry text-center">
+          Portfolio entry will go here
+        </div>
+        <div class="col-5 portfolio_entry text-center align-items-center">
+          Portfolio image and info will go here
+        </div>
+        <div class="col-5 portfolio_entry text-center">
+          Portfolio entry will go here
+        </div>
+        <div class="col-5 portfolio_entry text-center align-items-center">
+          Portfolio image and info will go here
+        </div>
       </div>
-      <div class="col-5 portfolio_entry text-center align-items-center">
-        Portfolio image and info will go here
-      </div>
-      <div class="col-5 portfolio_entry text-center">
-        Portfolio entry will go here
-      </div>
-      <div class="col-5 portfolio_entry text-center align-items-center">
-        Portfolio image and info will go here
-      </div>
-      <div class="col-5 portfolio_entry text-center">
-        Portfolio entry will go here
-      </div>
-      <div class="col-5 portfolio_entry text-center align-items-center">
-        Portfolio image and info will go here
-      </div>
+
     </div>
   </div>
   <!-- end of container -->
