updated <br> tags and description on the head

--- a/index.html
+++ b/index.html
@@ -168,9 +168,10 @@
       <div class="row justify-content-center">
         <div class="col-md-6">
           <form id="contact" action="#" method="post">
-            <label for="name"></label><input name="name" type="text" placeholder="Name" /><br />
-            <label for="phoneNum"></label><input name="phoneNum" type="tel" placeholder="(999-999-9999)" /><br />
-            <label for="service">What service are you interested in: </label><input name="service" type="dropdown" /><br />
+            <label for="name"></label><input name="name" type="text" placeholder="Name" /><br>
+            <label for="phoneNum"></label><input name="phoneNum" type="tel" placeholder="Phone number" /><br>
+            <label for="service">Tell me a little how I can help you: </label><br>
+            <input name="service" type="textarea" /><br>
           </form>
         </div>
         <div class="col-md-4">
