--- a/newindex.html
+++ b/newindex.html
@@ -7,7 +7,7 @@
   <meta charset="utf-8">
   <meta http-equiv="x-ua-compatible" content="ie=edge">
   <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
-  <meta name="description" content="Portfolio page displaying some of the projects I have built while in college and after.">
+  <meta name="description" content="Portfolio page displaying some of the projects I have built.">
 
   <title>JQ.net: Jose Quinones Web Development Portfolio</title>
 
