--- a/index.html
+++ b/index.html
@@ -35,131 +35,131 @@
       <div class="jumbotron jumbotron-fluid">
         <div class="container">
           <div class="row justify-content-center">
-            <div id="head_shot">
-              <img src="#" alt="picture of me attempting to look very thoughtful and intelligent" width="#" />
+            <!-- <div id="head_shot"> -->
+            <img class="head_shot" src="https://i.imgur.com/pRgS9r6.jpg?1" alt="picture of me attempting to look very thoughtful and intelligent" width="60%" />
+          </div>
+        </div>
+        <img class="d-flex align-content-center flex-column" id="hero-image" src="images/hero_image_2x.png" alt="computing devices" />
+        <div class="external_sites">
+          <a href="#" rel="noopener"><img class="float-right" src="images/LinkedIn_2x.png" alt="LinkedIn icon" width="100%"/></a>
+          <a href="#" rel="noopener"><img class="float-right" src="images/Github_2x.png" alt="GitHub icon" width="100%"/></a>
+        </div>
+      </div>
+  </div>
+  </header>
+  <!-- Main portfolio section -->
+  <section>
+    <div class="portfolio_heading" id="portfolio">
+      <img src="images/Portfolio_2x.png" alt="Portfolio heading" width="100%" />
+    </div>
+    <!-- Portfolio entries -->
+    <div class="row">
+      <!-- Entry 1 -->
+      <div class="col-12 col-md-4">
+        <div class="entry_bg">
+          <div class="portfolio_entry">
+            <h3 class="text-center"><i>Music Store</i></h3>
+            <div class="portfolio_detail">
+              <img src="images/music_store.png" class="entry_image" alt="image of entry for the music store" width="100%" />
+              <div class="middle">
+                <div class="entry_info">A school project concept music store with a MySQL database, shopping cart, and User Authentication written in PHP. Check out my code on GitHub.</div>
+              </div>
             </div>
           </div>
-          <img class="d-flex align-content-center flex-column" id="hero-image" src="images/hero_image_2x.png" alt="computing devices" />
           <div class="external_sites">
-            <a href="#" rel="noopener"><img class="float-right" src="images/LinkedIn_2x.png" alt="LinkedIn icon" width="100%"/></a>
-            <a href="#" rel="noopener"><img class="float-right" src="images/Github_2x.png" alt="GitHub icon" width="100%"/></a>
+            <a href="https://github.com/jmoney618/music-store" target="_blank" rel="noopener"><img src="images/Github_2x.png" alt="GitHub icon" width="100%"/></a>
           </div>
         </div>
       </div>
-    </header>
-    <!-- Main portfolio section -->
-    <section>
-      <div class="portfolio_heading" id="portfolio">
-        <img src="images/Portfolio_2x.png" alt="Portfolio heading" width="100%" />
-      </div>
-      <!-- Portfolio entries -->
-      <div class="row">
-        <!-- Entry 1 -->
-        <div class="col-12 col-md-4">
-          <div class="entry_bg">
-            <div class="portfolio_entry">
-              <h3 class="text-center"><i>Music Store</i></h3>
-              <div class="portfolio_detail">
-                <img src="images/music_store.png" class="entry_image" alt="image of entry for the music store" width="100%" />
-                <div class="middle">
-                  <div class="entry_info">A school project concept music store with a MySQL database, shopping cart, and User Authentication written in PHP. Check out my code on GitHub.</div>
-                </div>
+      <!-- Entry 2 -->
+      <div class="col-12 col-md-4">
+        <div class="entry_bg">
+          <div class="portfolio_entry">
+            <h4 class="text-center"><i>Rock, Paper, Scissors, Lizard, Spock</i></h4>
+            <div class="portfolio_detail">
+              <img src="images/rpsls.png" class="entry_image" alt="image of entry for the Rock Paper Scissors Lizard Spock game" width="100%" />
+              <div class="middle">
+                <div class="entry_info">A recreation of the classic game Rock Paper Scissors Lizard Spock. The game engine was written in JavaScript. Check out my code on GitHub.</div>
               </div>
-            </div>
-            <div class="external_sites">
-              <a href="https://github.com/jmoney618/music-store" target="_blank" rel="noopener"><img src="images/Github_2x.png" alt="GitHub icon" width="100%"/></a>
             </div>
           </div>
-        </div>
-        <!-- Entry 2 -->
-        <div class="col-12 col-md-4">
-          <div class="entry_bg">
-            <div class="portfolio_entry">
-              <h4 class="text-center"><i>Rock, Paper, Scissors, Lizard, Spock</i></h4>
-              <div class="portfolio_detail">
-                <img src="images/rpsls.png" class="entry_image" alt="image of entry for the Rock Paper Scissors Lizard Spock game" width="100%" />
-                <div class="middle">
-                  <div class="entry_info">A recreation of the classic game Rock Paper Scissors Lizard Spock. The game engine was written in JavaScript. Check out my code on GitHub.</div>
-                </div>
-              </div>
-            </div>
-            <div class="external_sites">
-              <a href="https://github.com/jmoney618/rpsls" target="_blank" rel="noopener"><img src="images/Github_2x.png" alt="GitHub icon" width="100%"/></a>
-            </div>
-          </div>
-        </div>
-        <!-- Entry 3 -->
-        <div class="col-12 col-md-4">
-          <div class="entry_bg">
-            <div class="portfolio_entry">
-              <h3 class="text-center"><i>Video Game Store</i></h3>
-              <div class="portfolio_detail">
-                <img src="images/video_game_store.png" class="entry_image" alt="image of entry for video store" width="100%" />
-                <div class="middle">
-                  <div class="entry_info">This school project is a basic video game store.  The games' details and images were stored in a MySQL database. A shopping cart was also a focus in this project. Check out my code on GitHub.</div>
-                </div>
-              </div>
-            </div>
-            <div class="external_sites">
-              <a href="https://github.com/jmoney618/video_games" target="_blank" rel="noopener"><img src="images/Github_2x.png" alt="GitHub icon" width="100%"/></a>
-            </div>
+          <div class="external_sites">
+            <a href="https://github.com/jmoney618/rpsls" target="_blank" rel="noopener"><img src="images/Github_2x.png" alt="GitHub icon" width="100%"/></a>
           </div>
         </div>
       </div>
-      <div class="row">
-        <!-- Entry 4 -->
-        <div class="col-12 col-md-4">
-          <div class="entry_bg">
-            <div class="portfolio_entry">
-              <h3 class="text-center"><i>Number Averager</i></h3>
-              <div class="portfolio_detail">
-                <img src="images/averager.png" class="entry_image" alt="image of Number Averager console app" width="100%" />
-                <div class="middle">
-                  <div class="entry_info">This is my first C#.NET app. I built it for a coworker who regularly plays the "guess what number I'm thinking of game" with his staff. Check out my source code on GitHub.</div>
-                </div>
+      <!-- Entry 3 -->
+      <div class="col-12 col-md-4">
+        <div class="entry_bg">
+          <div class="portfolio_entry">
+            <h3 class="text-center"><i>Video Game Store</i></h3>
+            <div class="portfolio_detail">
+              <img src="images/video_game_store.png" class="entry_image" alt="image of entry for video store" width="100%" />
+              <div class="middle">
+                <div class="entry_info">This school project is a basic video game store.  The games' details and images were stored in a MySQL database. A shopping cart was also a focus in this project. Check out my code on GitHub.</div>
               </div>
             </div>
-            <div class="external_sites">
-              <a href="https://github.com/jmoney618/numbers_hat" target="_blank" rel="noopener"><img src="images/Github_2x.png" alt="GitHub icon" width="100%"/></a>
-            </div>
           </div>
-        </div>
-        <!-- Entry 5 -->
-        <div class="col-12 col-md-4">
-          <div class="entry_bg">
-            <div class="portfolio_entry">
-              <h3 class="text-center"><i>Magic Number Hat</i></h3>
-              <div class="portfolio_detail">
-                <img src="images/number_hat.png" class="entry_image" alt="image of Magic Hat console app" width="100%" />
-                <div class="middle">
-                  <div class="entry_info">This console app is (as the name implies) a number averager written in C#.NET. It calculates the average of numbers entered by the user. I also wrote this app with separate Classes. Check out my source code on GitHub.</div>
-                </div>
-              </div>
-            </div>
-            <div class="external_sites">
-              <a href="https://github.com/jmoney618/Averager" target="_blank" rel="noopener"><img src="images/Github_2x.png" alt="GitHub icon" width="100%"/></a>
-            </div>
+          <div class="external_sites">
+            <a href="https://github.com/jmoney618/video_games" target="_blank" rel="noopener"><img src="images/Github_2x.png" alt="GitHub icon" width="100%"/></a>
           </div>
-        </div>
-        <!-- Entry 6 -->
-        <div class="col-12 col-md-4">
-          <!--<div class="entry_bg">-->
-          <!--<div class="portfolio_entry">-->
-          <!--<h3 class="text-center"><i>#Title#</i></h3>-->
-          <!--<div class="portfolio_detail">-->
-          <!--<img src="#" class="entry_image" alt="#" width="100%"/>-->
-          <!--<div class="middle">-->
-          <!--<div class="entry_info">###Entry detail###</div>-->
-          <!--</div>-->
-          <!--</div>-->
-          <!--</div>-->
-          <!--<div class="external_sites">-->
-          <!--<a href="#" target="_blank" rel="noopener"><img src="Github_2x.png" alt="GitHub icon" width="100%"/></a>-->
-          <!--</div>-->
-          <!--</div>-->
         </div>
       </div>
-    </section>
+    </div>
+    <div class="row">
+      <!-- Entry 4 -->
+      <div class="col-12 col-md-4">
+        <div class="entry_bg">
+          <div class="portfolio_entry">
+            <h3 class="text-center"><i>Number Averager</i></h3>
+            <div class="portfolio_detail">
+              <img src="images/averager.png" class="entry_image" alt="image of Number Averager console app" width="100%" />
+              <div class="middle">
+                <div class="entry_info">This is my first C#.NET app. I built it for a coworker who regularly plays the "guess what number I'm thinking of game" with his staff. Check out my source code on GitHub.</div>
+              </div>
+            </div>
+          </div>
+          <div class="external_sites">
+            <a href="https://github.com/jmoney618/numbers_hat" target="_blank" rel="noopener"><img src="images/Github_2x.png" alt="GitHub icon" width="100%"/></a>
+          </div>
+        </div>
+      </div>
+      <!-- Entry 5 -->
+      <div class="col-12 col-md-4">
+        <div class="entry_bg">
+          <div class="portfolio_entry">
+            <h3 class="text-center"><i>Magic Number Hat</i></h3>
+            <div class="portfolio_detail">
+              <img src="images/number_hat.png" class="entry_image" alt="image of Magic Hat console app" width="100%" />
+              <div class="middle">
+                <div class="entry_info">This console app is (as the name implies) a number averager written in C#.NET. It calculates the average of numbers entered by the user. I also wrote this app with separate Classes. Check out my source code on GitHub.</div>
+              </div>
+            </div>
+          </div>
+          <div class="external_sites">
+            <a href="https://github.com/jmoney618/Averager" target="_blank" rel="noopener"><img src="images/Github_2x.png" alt="GitHub icon" width="100%"/></a>
+          </div>
+        </div>
+      </div>
+      <!-- Entry 6 -->
+      <div class="col-12 col-md-4">
+        <!--<div class="entry_bg">-->
+        <!--<div class="portfolio_entry">-->
+        <!--<h3 class="text-center"><i>#Title#</i></h3>-->
+        <!--<div class="portfolio_detail">-->
+        <!--<img src="#" class="entry_image" alt="#" width="100%"/>-->
+        <!--<div class="middle">-->
+        <!--<div class="entry_info">###Entry detail###</div>-->
+        <!--</div>-->
+        <!--</div>-->
+        <!--</div>-->
+        <!--<div class="external_sites">-->
+        <!--<a href="#" target="_blank" rel="noopener"><img src="Github_2x.png" alt="GitHub icon" width="100%"/></a>-->
+        <!--</div>-->
+        <!--</div>-->
+      </div>
+    </div>
+  </section>
   </div>
   <!-- End main container -->
   <div class="footer">
